Fixes #933: Search Bar is visible while typing in mobile. (#1053)

--- a/src/app/footer-navbar/footer-navbar.component.css
+++ b/src/app/footer-navbar/footer-navbar.component.css
@@ -102,3 +102,9 @@ div a:active {
     padding-right: 1%;
   }
 }
+
+@media screen and (max-height:350px){
+  .footer-bar{
+    display:none;
+  }
+}
